# Peach-Agent

./: .gitignore  PEACH.md  README.md  install.sh  package-lock.json  package.json  peach_config.example.json  pyproject.toml  requirements-peach.txt  vercel.json
api/: analyze.js  research-sync.js  research.js  send-email.js
peach/: __init__.py  __main__.py  agent.py  alpaca.py  analyzer.py  cache.py  charts.py  config.py  daemon.py  data_fetcher.py  discord_bot.py  logging_setup.py  main.py  memory.py  notifier.py  portfolio.py  report.py  research_agent.py  research_db.py  research_tools.py  telegram_bot.py  tools.py
public/: 404.html  architecture.html  changelog.html  config.html  dashboard.html  deploy.html  docs.html  faq.html  index.html  install.html  paper-trades.html  privacy.html  site.js  styles.css  telegram.html
scripts/: generate_assets.py
